# chilizHack

./: .gitignore  README.md
agent_system/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PRD.md  QUEST_SYSTEM_STATUS.md  README.md  TESTING_GUIDE.md  agent_workflow_patterns.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  sports_quest.db  sports_quest_ai_agents_analysis.md
agent_system/src/: __main__.py
agent_system/src/agents/: distribution_agent.py  orchestrator.py  preference_analyzer.py  quest_generator.py  validation_agents.py
agent_system/src/ai_agents/: __init__.py  clash_quest_agent.py  clash_quest_generator.py  collective_quest_agent.py  collective_quest_generator.py  individual_quest_agent.py  individual_quest_generator.py  quest_orchestrator_agent.py
agent_system/src/api/: main.py
agent_system/src/api/routes/: espn.py  events.py  quests.py  (+7 more)
agent_system/src/core/: init_data.py  workflow_engine.py
agent_system/src/models/: __init__.py  database.py  event.py  quest.py  team.py  user.py  user_team.py
agent_system/src/schemas/: user.py
agent_system/src/services/: api_football_service.py  database_integration.py  espn_football_service.py  event_scheduler.py  sportdevs_service.py
agent_system/src/tools/: database_tools.py  quest_tools.py  team_mapping.py  web_search_tools.py
agent_system/tests/: README.md  __init__.py  sports_quest.db  test_agents_system.py  test_auth_methods.py  test_complete_integration.py  test_full_integration.py  test_matches_structure.py  test_sportdevs.py  test_teams_db.py  test_working_api.py
(+53 files in other folders)
